# git-autocommit

./: CMakeLists.txt  Makefile  Makefile.am  README  README.md  activity.c  check.c  check.h  checkpid.c  checkpid.h  client  client.c  configure.ac  ensure.h  gitcommit.el  gitcommit.stupid.el  hooks.c  hooks.h  index_reader.c  interpolate.py  interpolate.tex  main  main.c  make_module.cmake.in  min.h  myassert.h  net.c  net.h  oldmakefile.mk  ops.h  repo.c  repo.h  server  server.c  testgit.c
src/: activity.c  activity.h  check.c  check.h  checkpid.c  checkpid.h  client.c  config_locations.h.in  continuation.c  continuation.h  eventbase.c  eventbase.h  hooks.c  hooks.h  ignore.h  index_reader.c  my_cflags.cmake.h  myalloc.h  net.c  net.h  note.c  ops.h  repo.c  repo.h  server.c
